# delta-sharing

./: .env.template  .gitignore  .scalafix.conf  .spectral.yaml  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  PROTOCOL.md  README.md  RELEASE_NOTES.md  build.gradle.kts  build.sbt  delta-sharing-protocl-api-description.yml  delta-sharing-protocol-api-description.yml  delta-sharing-server.yaml  gradle.properties  lombok.config  renovate.json  scalastyle-config.xml  settings.gradle.kts  version.sbt
.github/: CODEOWNERS  ci.yml  dependabot.yml  renovate.json5
.github/workflows/: build-and-test.yml  build-kernel-wheels.yml  build_doc.yaml  ci.yml  compile.yaml  kernel-release.yml  release.yml  spectral.yaml
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: Utils.kt  lakesharing.java-conventions.gradle.kts  whitefox.java-conventions.gradle.kts
cli/: README.md  cli.py  pyproject.toml  setup.py  test_cli.py
client/: build.gradle.kts
client-spark/: build.gradle.kts
client-spark/src/test/resources/: MrFoxProfile.json
deployment/lightsail/: demo.tfvars  main.tf
dev/: python_release.sh  release.sh  spark_release.sh  test_release.sh
docs/: delta-sharing.html  development_guidelines.md  index.html
docs/protocol/: delta-sharing-protocol-api.yml  lake-sharing-protocol-api.yml  lake-sharing-protocol.md  whitefox-protocol-api.yml  whitefox-protocol.md
docs/swagger-ui/: swagger-initializer.js
docsite/: .gitignore  build.gradle.kts  docusaurus.config.js  package-lock.json  package.json
docsite/docs/: authentication.md  development_guidelines.md  intro.md
docsite/docs/architecture/: HighLevelDesign.md  README.md  _category_.json  logical_organization.md
docsite/docs/architecture/memos/: 001_Memo.md  _category_.json
docsite/docs/deployment/: README.md  lightsail.md
docsite/docs/protocols/: README.md  _category_.json  delta-sharing-protocol.md  whitefox-protocol.md
docsite/src/components/HomepageFeatures/: index.js
docsite/src/css/: custom.css
docsite/static/swagger-ui/: swagger-initializer-delta.js  swagger-initializer.js
examples/: .scalafmt.conf  README.md  main.scala  open-datasets.share
examples/docker-knox/truststore/: truststore.p12
examples/oauth/: README.md  requirements.txt  u2m-entraid-capture-jwt-token.py
examples/python/: quickstart_arrow.py  quickstart_pandas.py  quickstart_pyarrow.py  quickstart_spark.py
jarTest/: pom.xml
jarTest/src/test/conf/: delta-sharing-server.yaml
jarTest/src/test/java/: jarTest.java
project/: ArtifactoryCredentials.scala  PublishToArtifactory.scala  build.properties  build.sbt  plugins.sbt
protocol/: delta-sharing-protocol-api.yml  whitefox-protocol-api.yml
python/: NOTICE.txt  README.md  pyproject.toml  read_shared_dv_table.py  requirements-dev.in  requirements-dev.txt  setup.py
python/delta-kernel-python/: Cargo.toml  README.md  test.py
python/delta-kernel-python/src/: lib.rs
python/delta-kernel-rust-sharing-wrapper/: Cargo.toml  README.md
python/delta-kernel-rust-sharing-wrapper/src/: lib.rs
python/delta_exchange/: __init__.py  client.py  converter.py  delta_exchange.py  protocol.py  reader.py  remote_delta_log.py  rest_client.py  utils.py  version.py
python/delta_exchange/tests/: conftest.py  test_converter.py  test_delta_exchange.py  test_profile.json  test_protocol.py  test_reader.py  test_remote_delta_log.py  test_rest_client.py  test_utils.py  test_version.py
python/delta_sharing/: __init__.py  _internal_auth.py  _yarl_patch.py  auth.py  converter.py  delta_sharing.py  fake_checkpoint.py  protocol.py  reader.py  reader_kernel.py  rest_client.py  sharing_client.py  version.py
python/delta_sharing/tests/: __init__.py  conftest.py  test_auth.py  test_converter.py  test_custom_session.py  test_delta_sharing.py  test_e2e.py  test_hackathon.py  test_managed_identity_client.py  test_oauth_client.py  test_profile.json  test_profile_basic.json  test_profile_bearer.json  test_profile_oauth2.json  test_protocol.py  test_reader.py  test_rest_client.py
python/dev/: .gitignore  lint-python  pytest  reformat  tox.ini
sbin/: buildNativeContainer.sh
scripts/: profile.json  python-connector.py  query.json
server/: build.gradle.kts
server/app/: build.gradle.kts
server/app/src/main/docker/: Dockerfile.jvm  Dockerfile.native
server/app/src/main/resources/: application.properties  banner.txt  core-site.xml
server/app/src/test/resources/: application.properties
server/core/: build.gradle.kts
server/core/src/testFixtures/java/io/whitefox/: AwsGlueTestConfig.java  DeltaTestUtils.java  IcebergTestUtils.java  MutableClock.java  S3TestConfig.java  TestUtils.java
server/core/src/testFixtures/resources/: application.properties
server/persistence/memory/: build.gradle.kts
server/src/main/docker/: Dockerfile.jvm  Dockerfile.native  Dockerfile.native-micro
server/src/main/java/io/sharing/persistence/: InMemoryStorageManager.java  ResultAndTotalSize.java  StorageManager.java
server/src/main/java/io/whitefox/annotations/: SkipCoverageGenerated.java
server/src/main/java/io/whitefox/core/: CreateMetastore.java  InternalTableName.java  Metadata.java  Metastore.java  MetastoreType.java  Protocol.java  Provider.java  ReadTableRequest.java  ResultAndTotalSize.java  Schema.java  SchemaName.java  Share.java  ShareName.java  SharedTable.java  SharedTableName.java  (+5 more)
server/src/main/java/it/agilelab/: GreetingResource.java
server/src/main/protobuf/: governance.proto  protocol.proto  server.proto
server/src/main/resources/: application.properties
server/src/native-test/java/it/agilelab/: GreetingResourceIT.java
server/src/test/java/io/whitefox/: OpenApiValidationFilter.java  TestingUtil.java
server/src/test/java/it/agilelab/: GreetingResourceTest.java
server/src/test/resources/: application.properties  core-site.xml
server/src/universal/conf/: delta-sharing-server.yaml.template
spark/src/test/resources/: log4j.properties
terraform/: README.md
terraform/aws/: .gitignore  iam.tf  main.tf  variables.tf  versions.tf
whitefox-platform/: build.gradle.kts
(+723 files in other folders)
