[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-sharing"
dynamic = ["version"]
description = "Python Connector for Delta Sharing"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "The Delta Lake Project Authors", email = "delta-users@googlegroups.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "delta-kernel-rust-sharing-wrapper>=0.3.1,<1.0",
    "pandas>=2.0.3,<3.0.0",
    "pyarrow>=16.1.0,<=23.0.1",
    "fsspec>=0.7.4,<=2026.2.0",
    "requests>=2.20.0,<=2.32.5",
    "aiohttp>=3.0.0,<=3.13.3",
    "yarl>=1.6.0,<=1.23.0",
    "jwcrypto>=1.5.6,<2.0",
]

[project.optional-dependencies]
s3 = ["s3fs"]
abfs = ["adlfs"]
adl = ["adlfs"]
gcs = ["gcsfs"]
gs = ["gcsfs"]

[project.urls]
Source = "https://github.com/delta-io/delta-sharing"
Documentation = "https://github.com/delta-io/delta-sharing"
Issues = "https://github.com/delta-io/delta-sharing/issues"

[tool.setuptools.dynamic]
version = {attr = "delta_sharing.version.__version__"}

[tool.setuptools.packages.find]
include = ["delta_sharing"]

[tool.uv]
exclude-newer = "2026-03-19T00:00:00Z"

[dependency-groups]
dev = [
    "mypy==0.981",
    "flake8<=7.3.0",
    "black==24.3.0",
    "pytest<=9.0.2",
    "maturin<=1.12.6",
    "types-requests<=2.32.0.20260311",
    "setuptools>=64",
    "packaging",
]
