[package]
name = "delta-kernel-rust-sharing-wrapper"
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[lib]
name = "delta_kernel_rust_sharing_wrapper"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "53.3.0", features = ["pyarrow"] }
# delta_kernel = {version = "0.5", features = ["cloud", "default", "default-engine"]}
delta_kernel = { git = "https://github.com/OussamaSaoudi-db/delta-kernel-rs.git", branch = "cdf_prototype", features = ["cloud", "default", "default-engine"]}
openssl = { version = "0.10", features = ["vendored"] }
url = "2"

[dependencies.pyo3]
version = "0.22.4"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
