[package]
name = "delta-kernel-rust-sharing-wrapper"
edition = "2021"
license = "Apache-2.0"
version = "0.2.2"

[lib]
name = "delta_kernel_rust_sharing_wrapper"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "54.0.0", features = ["pyarrow", "ffi"] }
delta_kernel = { version = "0.6.1", features = ["cloud", "default-engine"]}
openssl = { version = "0.10", features = ["vendored"] }
polars = { version = "0.46.0", features = ["lazy"] }
polars-arrow = "0.46.0"
pyo3-polars = { version = "0.20.0", features = ["dtype-decimal", "lazy"] }
url = "2"

[dependencies.pyo3]
version = "0.23.3"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "rust_decimal"]
