[package]
name = "delta-kernel-rust-sharing-wrapper"
edition = "2021"
license = "Apache-2.0"
version = "0.3.0"

[lib]
name = "delta_kernel_rust_sharing_wrapper"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "57", features = ["pyarrow"] }
object_store = "0.12.4"
delta_kernel = { version = "0.18.1", features = ["default-engine-rustls", "arrow-57"]}
openssl = { version = "0.10", features = ["vendored"] }
url = "2"

[dependencies.pyo3]
version = "0.26.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
